--- a/andriod/CheckMeNew/app/build.gradle
+++ b/andriod/CheckMeNew/app/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.application'
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
 android {
     compileSdkVersion 25
     buildToolsVersion '26.0.2'
-  //  useLibrary 'org.apache.http.legacy'  //added  commented lately
+    //  useLibrary 'org.apache.http.legacy'  //added  commented lately
 
     defaultConfig {
         applicationId "com.example.majde.checkmenew"
@@ -37,7 +40,8 @@ android {
 
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds' //added recently!-to delete if itsnot helping
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+        //added recently!-to delete if itsnot helping
     }
 
 //i added reposi... block
@@ -49,7 +53,8 @@ android {
         compile fileTree(dir: 'libs', include: ['*.jar'])
 
 
-        compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2' //added lately---useless
+        compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+        //added lately---useless
 
 
         androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -70,7 +75,7 @@ android {
         compile 'com.facebook.android:facebook-android-sdk:4.22.0' // i added
 
 
-       compile 'com.android.support.constraint:constraint-layout:1.0.2'
+        compile 'com.android.support.constraint:constraint-layout:1.0.2'
         compile 'com.android.support:design:25.0.0'// was 2 in the middle
         testCompile 'junit:junit:4.12'
 
