--- a/andriod/CheckMeNew/app/src/main/AndroidManifest.xml
+++ b/andriod/CheckMeNew/app/src/main/AndroidManifest.xml
@@ -2,27 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.majde.checkmenew">
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--     those below two lines added newly  not harming the apprunning time -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-feature android:name="android.hardware.camera" />
+
     <!--
-    those below two lines added newly  not harming the apprunning time
-            -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
-
-    <uses-feature android:name="android.hardware.camera"></uses-feature>
-
-<!--
    keytool -exportcert -alias androiddebugkey -keystore ~/.android/debug.keystore | openssl sha1 -binary | openssl base64
     keytool -exportcert -alias androiddebugkey -keystore %HOMEPATH%\.android\debug.keystore | openssl sha1 -binary | openssl base64
     keytool -exportcert -alias YOUR_RELEASE_KEY_ALIAS -keystore YOUR_RELEASE_KEY_PATH | openssl sha1 -binary | openssl base64
-
--->
-
-
+    -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -30,135 +24,109 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"></meta-data>
+        </provider>
         //added
         <activity
             android:name=".ImportingManual"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"></activity>
         //aded
         <activity
             android:name=".EditCheckActivity"
-            android:label="@string/app_name">
-        </activity>
-
-
+            android:label="@string/app_name"></activity>
         //added
         <activity
             android:name=".ResultsActivity"
-            android:label="                                  CheckMe Results" >
-        </activity>
-
-
+            android:label="                                  CheckMe Results"></activity>
         //added
-
         <activity
             android:name=".AddedCmc"
-            android:label="CheckMeNew">
-
-        </activity>
-
-
+            android:label="CheckMeNew"></activity>
         //added
-
         <activity
             android:name=".RegistrationPage"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"></activity>
         //added
         <activity
             android:name=".HowToUse"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"></activity>
         //added
         <activity
             android:name=".ValidationResult"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"></activity>
         //added
         <activity
             android:name=".ForgotPassword"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"></activity>
         //added
         <activity
             android:name=".Notifications"
-            android:windowSoftInputMode="stateHidden"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden"></activity>
         //added
-
         <activity
             android:name=".History"
-            android:windowSoftInputMode="stateHidden"
-            android:label="@string/app_name">
-        </activity>
-
-
-
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".LoginPage"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />  <!-- was MAIN i changed to LoginPage-->
+                <action android:name="android.intent.action.MAIN" /> <!-- was MAIN i changed to LoginPage -->
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         //added
-
         <activity
             android:name=".AboutUs"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name"></activity>
         //added
         <activity
             android:name=".ImportingOCR"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
 
-
-
-
-
-      <!--  //added and i deleted<intent-filter>
+        <!--
+    //added and i deleted<intent-filter>
 
       //  <action android:name="android.intent.action.MAIN" />
 
       //  <category android:name="android.intent.category.LAUNCHER" />
-    //</intent-filter>     -->
-
+    //</intent-filter>
+        -->
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-
-        </activity>
-
+            android:label="@string/app_name"></activity>
         //added
-        <service android:name=".MyAlarmService"
+        <service
+            android:name=".MyAlarmService"
             android:enabled="true" />
-        <receiver android:name=".MyReceiver"/>
 
+        <receiver android:name=".MyReceiver" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-        
+        <activity android:name=".PicShowTest"></activity>
     </application>
 
 </manifest>
